--- a/app/frontend/src/App.css
+++ b/app/frontend/src/App.css
@@ -158,3 +158,106 @@ p {
   text-align: center;
   color: #FFFFFF;
 }
+
+/* body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #CAD2C5;
+  color: #CAD2C5;
+}
+
+.UserQuestionnaires {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 500px;
+  padding: 2rem;
+  background-color: #52796F;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+  margin: 0 auto;
+}
+
+.UserQuestionnaires p {
+  color: #CAD2C5;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.UserQuestionnaires input[type="text"],
+.UserQuestionnaires button {
+  width: 100%;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border: none;
+  border-radius: 4px;
+}
+
+.UserQuestionnaires input[type="text"]:focus {
+  outline: none;
+  box-shadow: 0 0 4px rgba(255, 140, 0, 0.5);
+}
+
+.UserQuestionnaires button {
+  background-color: #354F52;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+.UserQuestionnaires button:hover {
+  background-color: #2F3E46;
+}
+
+.UserQuestionnaires button:disabled {
+  background-color: #A35D00;
+  cursor: not-allowed;
+} */
+
+.UserQuestionnaires .questionnaire-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.UserQuestionnaires .questionnaire-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #52796F;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 4px;
+}
+
+.UserQuestionnaires .questionnaire-item div {
+  flex-basis: 25%;
+  text-align: center;
+}
+
+.UserQuestionnaires .questionnaire-item input[type="text"],
+.UserQuestionnaires .questionnaire-item button {
+  flex-basis: 25%;
+  margin: 0;
+  margin-left: 0.5rem;
+  width: 80%;
+}
+
+.UserQuestionnaires .questionnaire-item input[type="text"] {
+  text-align: center;
+  max-width: 100%;
+}
+
+@media screen and (max-width: 767px) {
+  .UserQuestionnaires .questionnaire-item {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .UserQuestionnaires .questionnaire-item div,
+  .UserQuestionnaires .questionnaire-item input[type="text"],
+  .UserQuestionnaires .questionnaire-item button {
+    flex-basis: 100%;
+    margin-bottom: 0.5rem;
+  }
+}
