--- a/app/frontend/src/App.css
+++ b/app/frontend/src/App.css
@@ -27,6 +27,7 @@ body {
   width: 100%;
   max-width: 500px;
   padding: 2rem;
+  padding-bottom: 1rem;
   background-color: #52796F;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
@@ -38,6 +39,7 @@ body {
 
 h1 {
   margin-bottom: 1rem;
+  text-align: center;
 }
 
 input[type="text"],
@@ -71,6 +73,10 @@ button:hover {
 button:disabled {
   background-color: #A35D00;
   cursor: not-allowed;
+}
+
+.submit-questionnaire-button {
+  margin-top: 32px;
 }
 
 a {
@@ -130,6 +136,7 @@ p {
 .nav-bar {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   background-color: #52796F;
   padding: 1rem 0;
 }
@@ -138,12 +145,28 @@ p {
   color: #CAD2C5;
   text-decoration: none;
   font-weight: bold;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
 }
 
 .nav-bar a:hover {
-  text-decoration: underline;
+  text-decoration: none; 
+  background-color: #354F52;
 }
 
+.nav-logout-button {
+  background-color: transparent;
+  color: #CAD2C5;
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
+
+.nav-logout-button:hover {
+  background-color: #354F52;
+}
 .main-content {
   display: flex;
   justify-content: center;
@@ -158,62 +181,6 @@ p {
   text-align: center;
   color: #FFFFFF;
 }
-
-/* body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #CAD2C5;
-  color: #CAD2C5;
-}
-
-.UserQuestionnaires {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 500px;
-  padding: 2rem;
-  background-color: #52796F;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-  margin: 0 auto;
-}
-
-.UserQuestionnaires p {
-  color: #CAD2C5;
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-.UserQuestionnaires input[type="text"],
-.UserQuestionnaires button {
-  width: 100%;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  border: none;
-  border-radius: 4px;
-}
-
-.UserQuestionnaires input[type="text"]:focus {
-  outline: none;
-  box-shadow: 0 0 4px rgba(255, 140, 0, 0.5);
-}
-
-.UserQuestionnaires button {
-  background-color: #354F52;
-  color: #FFFFFF;
-  cursor: pointer;
-}
-
-.UserQuestionnaires button:hover {
-  background-color: #2F3E46;
-}
-
-.UserQuestionnaires button:disabled {
-  background-color: #A35D00;
-  cursor: not-allowed;
-} */
 
 .UserQuestionnaires .questionnaire-list {
   display: flex;
@@ -248,6 +215,17 @@ p {
   max-width: 100%;
 }
 
+.no-questionnaires-message {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #FFFFFF;
+  background-color: #52796F;
+  padding: 1rem;
+  border-radius: 4px;
+  text-align: center;
+}
+
+
 @media screen and (max-width: 767px) {
   .UserQuestionnaires .questionnaire-item {
     flex-wrap: wrap;
@@ -258,6 +236,19 @@ p {
   .UserQuestionnaires .questionnaire-item input[type="text"],
   .UserQuestionnaires .questionnaire-item button {
     flex-basis: 100%;
+    margin-bottom: 0.5rem;
+  }
+  .nav-bar {
+    flex-wrap: wrap; 
+    justify-content: center; 
+    padding: 1rem; 
+  }
+
+  .nav-bar a {
+    margin-bottom: 0.5rem; 
+  }
+
+  .nav-logout-button {
     margin-bottom: 0.5rem;
   }
 }
