--- a/app/frontend/src/App.css
+++ b/app/frontend/src/App.css
@@ -1,10 +1,38 @@
+:root {
+  --color-bg: #FFFFFF;
+  --color-text: #354F52;
+  --color-a: #FFFFFF;
+  --color-modal-bg: #FFFFFF;
+  --color-border-button: #CAD2C5;
+  --color-button: #2A9D8F;
+  --color-button-hover: #21867A;
+  --color-button-disabled: #CAD2C5;
+  --color-error: #FF0000;
+  --color-input: #CAD2C5;
+  --color-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+body.dark-mode {
+  --color-bg: #354F52;
+  --color-text: #FFFFFF;
+  --color-a: #80CFA9;
+  --color-modal-bg: #354F52;
+  --color-border-button: #2A9D8F;
+  --color-button: #CAD2C5;
+  --color-button-hover: #2A9D8F;
+  --color-button-disabled: #21867A;
+  --color-error: #FF4D4D;
+  --color-input: #2A9D8F;
+  --color-box-shadow: 0 3px 6px rgba(255, 255, 255, 0.1);
+}
+
 body {
   margin: 0;
   font-family: Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #CAD2C5;
-  color: #CAD2C5;
+  background-color: var(--color-bg);
+  color: var(--color-text);
 }
 
 .App {
@@ -20,102 +48,22 @@ body {
   padding: 1rem;
 }
 
-.Dashboard,
-.Login,
-.Register,
-.Questionnaire {
-  width: 100%;
-  max-width: 500px;
-  padding: 2rem;
-  padding-bottom: 1rem;
-  background-color: #52796F;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-}
-
 .main-content {
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  padding: 1rem;
 }
 
-h1 {
+p {
+  margin-top: 0;
   margin-bottom: 1rem;
-  text-align: center;
 }
-
-input[type="text"],
-input[type="email"],
-input[type="password"],
-button {
-  width: 100%;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  border: none;
-  border-radius: 4px;
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="password"]:focus {
-  outline: none;
-  box-shadow: 0 0 4px rgba(255, 140, 0, 0.5);
-}
-
-button {
-  background-color: #354F52;
-  color: #FFFFFF;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #2F3E46;
-}
-
-button:disabled {
-  background-color: #A35D00;
-  cursor: not-allowed;
-}
-
-.questionnaire-name-input {
-  width: 100%;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  border: 1px solid #52796F;
-  border-radius: 4px;
-  font-size: 16px;
-  background-color: #CAD2C5;
-  color: #354F52;
-}
-
-.questionnaire-name-input:focus {
-  outline: none;
-  border-color: #354F52;
-  box-shadow: 0 0 4px rgba(255, 140, 0, 0.5);
-}
-
-.submit-questionnaire-button {
-  background-color: #354F52;
-  color: #CAD2C5;
-  border: none;
-  border-radius: 4px;
-  padding: 0.5rem;
-  font-size: 16px;
-  cursor: pointer;
-  margin-top: 1rem;
-  transition: background-color 0.3s ease;
-}
-
-.submit-questionnaire-button:hover {
-  background-color: #2F3E46;
-}
-
-.submit-questionnaire-button:disabled {
-  background-color: #A35D00;
-  cursor: not-allowed;
-}
-
 
 a {
-  color: #52796F;
+  color: var(--color-a);
   text-decoration: none;
 }
 
@@ -123,23 +71,26 @@ a:hover {
   text-decoration: underline;
 }
 
-p {
-  color: #CAD2C5;
-  margin-top: 0;
-  margin-bottom: 1rem;
+input[type="text"],
+input[type="email"],
+input[type="password"],
+button {
+    width: 90%;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    border: 2px solid var(--color-border-button);
+    border-radius: 4px;
+    font-size: 16px;
+    color: var(--color-text);
+    transition: all 0.3s ease;
 }
 
-.Questionnaire form {
-  display: flex;
-  flex-direction: column;
-}
-
-.Questionnaire h3 {
-  margin-bottom: 0.5rem;
-}
-
-.Questionnaire input[type="radio"] {
-  margin-right: 0.5rem;
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus {
+    outline: none;
+    border-color: var(--color-button);
+    box-shadow: 0 0 5px var(--color-button);
 }
 
 .modal {
@@ -152,149 +103,35 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 0.3s ease; /* Esto agrega una transición suave cuando el modal aparece y desaparece */
 }
 
 .modal-content {
-  background-color: white;
+  background-color: var(--color-modal-bg);
   padding: 20px;
   border-radius: 4px;
   text-align: center;
+  width: 80%; /* Esto hace que el contenido del modal ocupe el 80% del ancho de la ventana, puedes ajustarlo a tus necesidades */
+  max-width: 500px; /* Esto limita el ancho máximo del modal para que no se vea demasiado grande en pantallas grandes */
+  box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.1); /* Esto agrega una sombra alrededor del modal para darle un poco de profundidad */
+  transition: all 0.3s ease; /* Esto agrega una transición suave cuando el modal aparece y desaparece */
 }
 
-.header {
-  background-color: #354F52;
-  padding: 1rem;
-  text-align: center;
-  color: #FFFFFF;
+.modal-content p {
+  font-size: 1.2em; /* Esto hace que el texto en el modal sea un poco más grande que el texto normal */
 }
 
-.nav-bar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #52796F;
-  padding: 1rem 0;
-}
-
-.nav-bar a {
-  color: #CAD2C5;
-  text-decoration: none;
-  font-weight: bold;
-  padding: 0.5rem 1rem;
-  border-radius: 4px;
-}
-
-.nav-bar a:hover {
-  text-decoration: none; 
-  background-color: #354F52;
-}
-
-.nav-logout-button {
-  background-color: transparent;
-  color: #CAD2C5;
-  font-weight: bold;
-  padding: 0.5rem 1rem;
-  border-radius: 4px;
-  border: none;
-  cursor: pointer;
-}
-
-.nav-logout-button:hover {
-  background-color: #354F52;
-}
-.main-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-  padding: 1rem;
-}
-
-.footer {
-  background-color: #354F52;
-  padding: 1rem;
-  text-align: center;
-  color: #FFFFFF;
-}
-
-.UserQuestionnaires .questionnaire-list {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #CAD2C5; 
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); 
-  border-radius: 4px;
-}
-
-.UserQuestionnaires .questionnaire-item {
-  display: flex;
-  flex-direction: row; 
-  justify-content: space-between;
-  align-items: center;
-  background-color: #52796F;
-  padding: 1rem;
-  margin: 1rem;
-  border-radius: 4px;
-}
-
-.UserQuestionnaires .questionnaire-item div {
-  flex-basis: 25%;
-  text-align: center;
-  border: 1px solid #CAD2C5;
-  padding: 0.5rem;
-}
-
-.UserQuestionnaires .questionnaire-item input[type="text"],
-.UserQuestionnaires .questionnaire-item button {
-  flex-basis: 25%;
-  margin: 0;
-  margin-left: 0.5rem;
-  width: 80%;
-}
-
-.UserQuestionnaires .questionnaire-item input[type="text"] {
-  text-align: center;
-  max-width: 100%;
-}
-
-.no-questionnaires-message {
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: #FFFFFF;
-  background-color: #52796F;
-  padding: 1rem;
-  border-radius: 4px;
-  text-align: center;
+.modal-content button {
+  margin-top: 20px; /* Esto agrega un poco de espacio entre el texto y el botón */
+  padding: 10px 20px; /* Esto hace que el botón sea un poco más grande y más fácil de hacer clic */
+  font-size: 1em; /* Esto hace que el texto en el botón sea un poco más grande */
+  border: none; /* Esto elimina el borde predeterminado del botón */
+  border-radius: 4px; /* Esto le da al botón bordes redondeados */
+  cursor: pointer; /* Esto cambia el cursor a una mano cuando pasas el ratón sobre el botón */
 }
 
 .error-message {
-  color: #FF0000; 
-  margin-top: 1rem; 
+  color: var(--color-error);
+  margin-top: 1rem;
   text-align: center;
-}
-
-@media screen and (max-width: 767px) {
-  .UserQuestionnaires .questionnaire-item {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .UserQuestionnaires .questionnaire-item div,
-  .UserQuestionnaires .questionnaire-item input[type="text"],
-  .UserQuestionnaires .questionnaire-item button {
-    flex-basis: 100%;
-    margin-bottom: 0.5rem;
-  }
-  .nav-bar {
-    flex-wrap: wrap; 
-    justify-content: center; 
-    padding: 1rem; 
-  }
-
-  .nav-bar a {
-    margin-bottom: 0.5rem; 
-  }
-
-  .nav-logout-button {
-    margin-bottom: 0.5rem;
-  }
 }
