--- a/app/frontend/src/components/NavBar/NavBar.css
+++ b/app/frontend/src/components/NavBar/NavBar.css
@@ -30,6 +30,7 @@ body.dark-mode {
     padding: 0.5rem 1rem;
     border-radius: 4px;
     transition: all 0.3s ease;
+    box-shadow: var(--color-box-shadow);
 }
 
 .Nav-bar a:hover {
@@ -37,6 +38,7 @@ body.dark-mode {
     color: var(--color-nav-bar-a-hover);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
     transform: scale(1.05);
+    border-color: var(--color-nav-bar-a-hover-bg);
 }
 
 .nav-logout-button {
